--- a/package.json
+++ b/package.json
@@ -3,24 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.56",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@wordpress/block-editor": "^9.8.0",
+    "@wordpress/blocks": "^11.15.0",
+    "@wordpress/components": "^19.17.0",
+    "@wordpress/i18n": "^4.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "npm run build-admin; npm run build-client",
+    "build-admin": "webpack --config webpack.admin.config.js",
+    "build-client": "webpack --config webpack.client.config.js",
+    "plugin-zip": "wp-scripts plugin-zip"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +35,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.56",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/wordpress__blocks": "^11.0.7",
+    "@types/wordpress__i18n": "^3.11.0",
+    "@wordpress/scripts": "^23.7.2",
+    "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.54.5",
+    "sass-loader": "^13.0.2",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "files": [
+    "config.php",
+    "plugin.php",
+    "public",
+    "src"
+  ]
 }
