--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,33 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src"
-  ]
+    "files": [],
+    "compilerOptions": {
+        "experimentalDecorators": true,
+        "typeRoots": [ "./types", "./node_modules/@types"],
+        "target": "es5",
+        "lib": [
+          "dom",
+          "dom.iterable",
+          "esnext"
+        ],
+        "allowJs": true,
+        "sourceMap": true,
+        // "skipLibCheck": true,
+        // "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        // "forceConsistentCasingInFileNames": true,
+        // "noFallthroughCasesInSwitch": true,
+        "module": "ESNext",
+        "moduleResolution": "nodenext",
+        // "resolveJsonModule": true,
+        // "isolatedModules": true,
+        "jsx": "react"
+    },
+    "references": [
+        {
+            "path": "./tsconfig.admin.json"
+        },
+        {
+            "path": "./tsconfig.client.json"
+        }
+    ]
 }
