--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "plugin-zip": "wp-scripts plugin-zip",
-    "dev": "webpack --watch --config webpack.config.js"
+    "dev": "webpack --watch --config webpack.config.js --mode development"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +41,8 @@
     "@wordpress/i18n": "^4.16.0",
     "@wordpress/scripts": "^23.7.2",
     "mini-css-extract-plugin": "^2.6.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "ts-loader": "^9.3.1",
