--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "description": "Gutenberg Examples using Typescript",
   "license": "MIT",
-  "homepage": "https://github.com/wenchen/gutenbergex-ts.git/",
-	"repository": "git+https://github.com/wenchen/gutenbergex-ts.git.git",
+  "homepage": "https://github.com/wenchen/gutenbergex-ts/",
+	"repository": "git+https://github.com/wenchen/gutenbergex-ts.git",
 	"bugs": {
-		"url": "https://github.com/wenchen/gutenbergex-ts.git/issues"
+		"url": "https://github.com/wenchen/gutenbergex-ts/issues"
 	},
   "dependencies": {
     "web-vitals": "^2.1.4"
