--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gutenbergex-ts",
   "version": "0.1.0",
   "private": true,
-  "description": "Gutenberg Examples using Typescript",
+  "description": "Gutenberg Examples in Typescript",
   "license": "MIT",
   "homepage": "https://github.com/wenchen/gutenbergex-ts/",
   "repository": "git+https://github.com/wenchen/gutenbergex-ts.git",
@@ -41,6 +41,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.56",
+    "@types/react": "&17.0.2",
     "@types/wordpress__blocks": "^11.0.7",
     "@wordpress/block-editor": "^9.8.0",
     "@wordpress/blocks": "^11.15.0",
